--- a/1.html
+++ b/1.html
@@ -11,6 +11,8 @@
    h1 {font-size: 1.33em;}
   h2 {font-size: 1.17em;}
   p {margin: 0 0 0.5em 0;}
+  h1, h2 {margin: 10pt 0 2pt 0;}
+
    h1, h2 {
       color: red;
    }
