--- a/1.html
+++ b/1.html
@@ -12,7 +12,9 @@
   h2 {font-size: 1.17em;}
   p {margin: 0 0 0.5em 0;}
   h1, h2 {margin: 10pt 0 2pt 0;}
-
+  p:first-of-type {
+  font: 0.17em/1.33 Verdana, sans-serif;
+}
    h1, h2 {
       color: red;
    }
