--- a/1.html
+++ b/1.html
@@ -1,35 +1,66 @@
 <html>
 <head>
 <title>Experiments with CSS</title>
-<style type='text/css'> /* These styles will remove all padding and margins on h1, h2 and p elements, and make the headings red. */
+<style type='text/css'>
+  <link rel="stylesheet" type="text/css" href="http://ln.hixie.ch/" media="screen" title="Basic" />
+
+   p {
+      padding: 0;
+      margin: 0 0 0.5em 0;
+   }
+
+  
+   p:not(.first) {
+      text-indent: 5em;
+   }
+
+   
+   p.first {
+      text-indent: 0;
+   }
+
+   
+   p:first-of-type {
+      font: 0.17em/1.33 Verdana, sans-serif;
+   }
 
    h1, h2, p {
       padding: 0;
       margin: 0;
       font: 1em/1.33 Verdana, sans-serif;
    }
-   h1 {font-size: 1.33em;}
-  h2 {font-size: 1.17em;}
-  p {margin: 0 0 0.5em 0;}
-  h1, h2 {margin: 10pt 0 2pt 0;}
-  p:first-of-type {
-  font: 0.17em/1.33 Verdana, sans-serif;
-}
-   h1, h2 {
-      color: red;
+
+   h1 {
+      font-size: 1.33em;
+      color: red; /* Adding color property for h1 */
+      margin: 0.83em 0 0.17em 0; /* Added margin for h1 */
    }
+
+   h2 {
+      font-size: 1.17em;
+      color: red; /* Adding color property for h2 */
+      margin: 0.67em 0 0.13em 0; /* Added margin for h2 */
+   }
+
+   /* Background image CSS explanation */
+   /* Backgrounds don't have to be plain text colors. They can be images! */
+   /* background-color - The default color in case the image doesn't work/isn't available */
+   /* background-image - the image you wish to use */
+   /* background-repeat - repeat, repeat-x, repeat-y, or no-repeat */
+   /* background-attachment - fixed or scroll */
+   /* background-position - sets the position of the background image */
 
 </style>
 </head>
 <body>
    <div id="wrapper">
    <h1>Big page heading</h1>
-   <p class="introduction">This is the introductory paragraph.</p>
-   <p>Another paragraph waffling on about something, my favourite TV show, for three or four sentences.</p>
+   <p class="introduction first">This is the introductory paragraph.</p>
+   <p class="first">Another paragraph waffling on about something, my favourite TV show, for three or four sentences.</p>
 
    <div id="films">
       <h2><strong>A simple subhead:</strong> Films</h2>
-      <p class='recent'>A short discussion of the last three films I saw.</p>
+      <p class='recent first'>A short discussion of the last three films I saw.</p>
       <p>A discussion about my least favourite film</p>
 
     <div class="movieQuote">
@@ -41,5 +72,4 @@
    </div> <!-- end of div#films -->
    </div><!-- end of div#wrapper -->
 </body>
-
 </html>
